# solplorer

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
data/: Dockerfile
etl/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
etl/etl/: __main__.py  connector.py  runner.py
etl/etl/jobs/: dau.py  dtxfees.py  epoch.py  markets.py  news.py  nft_collections.py  nfts.py  stats.py  supply.py  tokens.py  tokens_cmc.py  top10.py  tvl.py  validators.js
etl/etl/utils/: __init__.py
etl/jobs/: package-lock.json  package.json
etl/jobs/src/: epoch.js  markets.js  news.js  stats.js  supply.js  tokens.js  tvl.js
etl/jobs/src/lib/: normalizers.js
etl/scripts/: get-daus.py  get-dtxfees.py
etl/tinybird/datasources/: dau.datasource  dtxfees.datasource
etl/tinybird/datasources/fixtures/: dau.ndjson  dtxfees.ndjson
etl/tinybird/pipes/: dau_list.pipe  dtxfees_list.pipe
scripts/: get-validators-data.mjs  package-lock.json  package.json
scripts/src/: get-coins-data.mjs  get-tvl-data.mjs  get-validators-data.mjs  utils.mjs
solacher/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
solacher/src/: index.js
solade/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
solade/src/: main.ts
solplorer/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
src/: constants.ts
sse/: .env.example  .gitignore  package-lock.json  package.json
www/: index.html
(+131 files in other folders)
